--- a/mscore/inspector_timesig.ui
+++ b/mscore/inspector_timesig.ui
@@ -66,6 +66,12 @@
         <iconset resource="musescore.qrc">
          <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item row="0" column="0" colspan="2">
