TAB: improvements to fonts and presets
*) Add a serif font for fret marks (built-in FreeSerifMscore)
*) Use built-in FreeSans as fret mark sans font instead of special font
*) Split generic 6-str and 4-str presets into "simple" and "full" each
*) Remove "Bandurria" preset (now equal to 6-str full)


Former-commit-id: ac17a8cf9946c49afaf6b0425c9b61666676d810

--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -306,22 +306,27 @@
                 </property>
                 <item>
                  <property name="text">
-                  <string comment="tablatture type">6 strings (generic guitar)</string>
+                  <string comment="tablatture type">6 strings (simple)</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
-                  <string comment="tablature type">4 strings (generic bass)</string>
+                  <string>6 string (full)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string comment="tablature type">4 strings (simple)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>4strings (full)</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
                   <string>ukulele</string>
-                 </property>
-                </item>
-                <item>
-                 <property name="text">
-                  <string>bandurria</string>
                  </property>
                 </item>
                 <item>
