--- a/mscore/inspector_chord.ui
+++ b/mscore/inspector_chord.ui
@@ -70,7 +70,7 @@
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="offsetX">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -138,6 +138,12 @@
      </item>
      <item row="4" column="1">
       <widget class="QComboBox" name="stemDirection">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <item>
         <property name="text">
          <string>Auto</string>
@@ -211,7 +217,7 @@
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="offsetY">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
