--- a/share/styles/appstyle-mac-dark.css
+++ b/share/styles/appstyle-mac-dark.css
@@ -1,14 +1,11 @@
-* {
-      font-size: 12pt; font-family: "freeSans";
-      }
 *:disabled {
       color: gray
       }
 QPushButton {
-      color: white
+      color: white;
       }
 QToolTip {
-      color: black;
+      color: white;
       opacity: 200;
       }
 PlayPanel QLabel#posLabel       {
@@ -52,16 +49,13 @@ AboutBoxDialog QLabel#titleLabel {
       font-size: 28pt
       }
 PaletteBoxButton {
-      font-size: 11pt; font-family: "FreeSans";
       border: 1px solid #787878;
       border-style: outset;
-      border-radius: 4px;
       background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
          stop: 0 #606060, stop: 1 #707070);
       color: white;
       }
 PaletteBoxButton:hover {
-      /* border: 1px solid #8080ff; */
       background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
          stop: 0 #787878, stop: 1 #888888);
       }
@@ -78,7 +72,6 @@ PaletteBox {
 QMenu#PaletteContext  {
       border: 1px solid #787878;
       border-style: outset;
-      border-radius: 4px;
       background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
          stop: 0 #606060, stop: 1 #707070);
       color: white
@@ -97,12 +90,8 @@ VoiceSelector > VoiceButton:checked {
 VoiceSelector {
       border-style: outset;
       border: 1px solid #787878;
-      border-radius: 4px;
       }
-QMenu::item:selected {
-      background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-         stop: 0 #787878, stop: 1 #888888);
-      }
+
 QGroupBox::title {
       subcontrol-origin: margin;
       subcontrol-position: top left;
