--- a/share/styles/appstyle-dark.css
+++ b/share/styles/appstyle-dark.css
@@ -48,30 +48,13 @@ QGroupBox#changeStops QPushButton#stop_p_15:checked { border: none; background: 
 AboutBoxDialog QLabel#titleLabel {
       font-size: 28pt
       }
-PaletteBoxButton {
-      border: 1px solid #787878;
-      border-style: outset;
-      background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-         stop: 0 #606060, stop: 1 #707070);
-      color: white;
-      }
-PaletteBoxButton:hover {
-      background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-         stop: 0 #787878, stop: 1 #888888);
-      }
-PaletteBoxButton:checked {
-      border-style: inset;
-      }
-PaletteBoxButton:disabled {
-      border-style: inset;
-      color: #909090;
-      }
 PaletteBox {
       background: #525252; color: white
       }
 QMenu#PaletteContext  {
       border: 1px solid #787878;
       border-style: outset;
+      border-radius: 3px;
       background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
          stop: 0 #606060, stop: 1 #707070);
       color: white
@@ -90,6 +73,7 @@ VoiceSelector > VoiceButton:checked {
 VoiceSelector {
       border-style: outset;
       border: 1px solid #787878;
+      border-radius: 3px;
       }
 
 QGroupBox::title {
