--- a/mscore/inspector_keysig.ui
+++ b/mscore/inspector_keysig.ui
@@ -54,7 +54,7 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="0" column="2">
+     <item row="1" column="2">
       <widget class="QToolButton" name="resetShowCourtesy">
        <property name="toolTip">
         <string>reset value</string>
@@ -74,14 +74,35 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0" colspan="2">
-      <widget class="QCheckBox" name="showCourtesy">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>show courtesy</string>
+        <string>Show Courtesy</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="2">
+     <item row="1" column="1">
+      <widget class="QCheckBox" name="showCourtesy">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Show Naturals</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QCheckBox" name="showNaturals">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
       <widget class="QToolButton" name="resetShowNaturals">
        <property name="toolTip">
         <string>reset value</string>
@@ -98,13 +119,6 @@
          <width>14</width>
          <height>14</height>
         </size>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QCheckBox" name="showNaturals">
-       <property name="text">
-        <string>show naturals</string>
        </property>
       </widget>
      </item>
