--- a/mscore/inspector_rest.ui
+++ b/mscore/inspector_rest.ui
@@ -54,7 +54,7 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="0" column="2">
+     <item row="0" column="3">
       <widget class="QToolButton" name="resetSmall">
        <property name="toolTip">
         <string>reset value</string>
@@ -74,10 +74,17 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0" colspan="2">
+     <item row="0" column="1" colspan="2">
       <widget class="QCheckBox" name="small">
        <property name="text">
-        <string>small</string>
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Small</string>
        </property>
       </widget>
      </item>
