--- a/mscore/inspector_trill.ui
+++ b/mscore/inspector_trill.ui
@@ -57,7 +57,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Subtype:</string>
+        <string>Type</string>
        </property>
       </widget>
      </item>
