--- a/mscore/inspector_beam.ui
+++ b/mscore/inspector_beam.ui
@@ -54,14 +54,7 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Grow Right</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" colspan="2">
+     <item row="2" column="1" colspan="2">
       <widget class="QComboBox" name="direction">
        <item>
         <property name="text">
@@ -80,21 +73,28 @@
        </item>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Grow Right</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Grow Left</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Direction</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="7" column="1">
       <widget class="QDoubleSpinBox" name="y1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -119,13 +119,6 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Position</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="3">
       <widget class="QToolButton" name="resetDistribute">
        <property name="text">
@@ -143,7 +136,14 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Position</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="3">
       <widget class="QToolButton" name="resetDirection">
        <property name="text">
         <string>...</string>
@@ -160,7 +160,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
+     <item row="7" column="2">
       <widget class="QDoubleSpinBox" name="y2">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -182,24 +182,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="3">
-      <widget class="QToolButton" name="resetGrowLeft">
-       <property name="text">
-        <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>14</width>
-         <height>14</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1" colspan="2">
+     <item row="3" column="1" colspan="2">
       <widget class="QDoubleSpinBox" name="growLeft">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -215,23 +198,7 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1" colspan="2">
-      <widget class="QDoubleSpinBox" name="growRight">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="singleStep">
-        <double>0.250000000000000</double>
-       </property>
-       <property name="value">
-        <double>1.000000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="3">
+     <item row="4" column="3">
       <widget class="QToolButton" name="resetGrowRight">
        <property name="text">
         <string>...</string>
@@ -248,14 +215,40 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0" colspan="3">
-      <widget class="QCheckBox" name="userPosition">
+     <item row="3" column="3">
+      <widget class="QToolButton" name="resetGrowLeft">
        <property name="text">
-        <string>User Position</string>
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="musescore.qrc">
+         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
        </property>
       </widget>
      </item>
-     <item row="4" column="3">
+     <item row="4" column="1" colspan="2">
+      <widget class="QDoubleSpinBox" name="growRight">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="singleStep">
+        <double>0.250000000000000</double>
+       </property>
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="3">
       <widget class="QToolButton" name="resetUserPosition">
        <property name="text">
         <string>...</string>
@@ -272,10 +265,31 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0" colspan="3">
-      <widget class="QCheckBox" name="distribute">
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>User Position</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Local Relayout</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" colspan="2">
+      <widget class="QCheckBox" name="distribute">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1" colspan="2">
+      <widget class="QCheckBox" name="userPosition">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
