--- a/mscore/inspector_glissando.ui
+++ b/mscore/inspector_glissando.ui
@@ -60,37 +60,6 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="2" column="0" colspan="2">
-      <widget class="QCheckBox" name="showText">
-       <property name="text">
-        <string>show text</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="text"/>
-     </item>
-     <item row="0" column="1">
-      <widget class="QComboBox" name="type">
-       <item>
-        <property name="text">
-         <string>straight</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>wavy</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Type</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
@@ -98,20 +67,10 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="QToolButton" name="resetType">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>14</width>
-         <height>14</height>
-        </size>
+        <string>Type</string>
        </property>
       </widget>
      </item>
@@ -132,7 +91,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="3" column="2">
       <widget class="QToolButton" name="resetShowText">
        <property name="text">
         <string>...</string>
@@ -146,6 +105,54 @@
          <width>14</width>
          <height>14</height>
         </size>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QToolButton" name="resetType">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="musescore.qrc">
+         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="text"/>
+     </item>
+     <item row="0" column="1">
+      <widget class="QComboBox" name="type">
+       <item>
+        <property name="text">
+         <string>straight</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>wavy</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Show Text</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QCheckBox" name="showText">
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
